--- a/.github/workflows/unity-ci.yml
+++ b/.github/workflows/unity-ci.yml
@@ -116,4 +116,4 @@ jobs:
         if: ${{ github.event.inputs.artifact_windows == 'true' }}
         with:
           name: potato-${{ matrix.target }}
-          path: builds/${{ matrix.target }}
+          path: builds/
