add rpc and client impliments

--- a/server/action-server3/rpc/battle.yaml
+++ b/server/action-server3/rpc/battle.yaml
@@ -19,3 +19,9 @@ contracts:
         results:
           container: array
           type: potato.SkillResult
+    sync_parameters:
+      imports:
+        - "battle"
+      notification:
+        unit_id: uint64
+        parameters: potato.CharacterStatus
