--- a/server/action-server3/Dockerfile
+++ b/server/action-server3/Dockerfile
@@ -27,7 +27,7 @@ RUN cd /opt/app/action-server3 \
 RUN cd /opt/app/action-server3 \
     && mkdir -p build.docker \
     && cmake -H. -Bbuild.docker -GNinja \
-    && cmake --build build.docker/ --target all || cmake --build build.docker/ --target all
+    && cmake -DCMAKE_BUILD_TYPE=Release --build build.docker/ --target all || -DCMAKE_BUILD_TYPE=Release cmake --build build.docker/ --target all
 
 FROM ubuntu:latest AS action_server3_application
 COPY --from=action_server3_build /opt/app/action-server3/build.docker/action-server3 ./
