--- a/server/action-server3/Dockerfile
+++ b/server/action-server3/Dockerfile
@@ -26,6 +26,7 @@ RUN cd /opt/app/action-server3 \
     && cd torikime && pipenv sync && cd ..
 RUN cd /opt/app/action-server3 \
     && mkdir -p build.docker \
+    && moxie -p all \
     && cmake -DCMAKE_BUILD_TYPE=Release -S . -H. -Bbuild.docker -GNinja \
     && cmake -DCMAKE_BUILD_TYPE=Release -S . --build build.docker/ -GNinja --target all || cmake -DCMAKE_BUILD_TYPE=Release -S . --build build.docker/ -GNinja --target all
 
