--- a/server/action-server3/Dockerfile
+++ b/server/action-server3/Dockerfile
@@ -28,7 +28,7 @@ RUN cd /opt/app/action-server3 \
     && mkdir -p build.docker \
     && mkdir -p all \
     && cmake -DCMAKE_BUILD_TYPE=Release -S . -H. -Bbuild.docker -GNinja \
-    && cmake -DCMAKE_BUILD_TYPE=Release -S . --build build.docker/ -GNinja --target all || cmake -DCMAKE_BUILD_TYPE=Release -S . --build build.docker/ -GNinja --target all
+    && cmake -DCMAKE_BUILD_TYPE=Release -S . --build build.docker/ -GNinja || cmake -DCMAKE_BUILD_TYPE=Release -S . --build build.docker/ -GNinja
 
 FROM ubuntu:latest AS action_server3_application
 COPY --from=action_server3_build /opt/app/action-server3/build.docker/action-server3 ./
