何とか表示が更新できるところまで

--- a/client/potato/Assets/Scripts/Example/Example.asmdef
+++ b/client/potato/Assets/Scripts/Example/Example.asmdef
@@ -6,7 +6,8 @@
         "GUID:78cd2e4cce174be4e9dd89c6dc4e2e11",
         "GUID:7f17b9cb5346a884480f0be3c8a336d5",
         "GUID:37ea47c61175e6e4881de5d3eec22056",
-        "GUID:106b5e7aa33083042887d39857884ac7"
+        "GUID:106b5e7aa33083042887d39857884ac7",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
