--- a/client/potato/Assets/Plugins/Terminal.Gui/Terminal.Gui.asmdef
+++ b/client/potato/Assets/Plugins/Terminal.Gui/Terminal.Gui.asmdef
@@ -1,3 +1,14 @@
 {
-	"name": "Terminal.Gui"
+    "name": "Terminal.Gui",
+    "rootNamespace": "",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
