--- a/server/action-server3/proto/CMakeLists.txt
+++ b/server/action-server3/proto/CMakeLists.txt
@@ -5,7 +5,13 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 
 set(Protobuf_DEBUG ON)
 
-FILE(GLOB_RECURSE PROTO_SOURCES RELATIVE "${CMAKE_SOURCE_DIR}/proto/" CONFIGURE_DEPENDS "*.proto")
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/battle.proto DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/message.proto DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+FILE(GLOB_RECURSE BASE_PROTO_SOURCES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" CONFIGURE_DEPENDS "*.proto")
+MESSAGE("BASE_PROTO_SOURCES: ${BASE_PROTO_SOURCES}")
+
+FILE(GLOB_RECURSE PROTO_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/*.proto")
 MESSAGE("PROTO_SOURCES: ${PROTO_SOURCES}")
 
 protobuf_generate_cpp(PROTO_SRC PROTO_HEADER DESCRIPTORS DES ${PROTO_SOURCES})
@@ -13,10 +19,10 @@ MESSAGE("PROTO_SRC: ${PROTO_SRC}")
 MESSAGE("PROTO_HEADER: ${PROTO_HEADER}")
 MESSAGE("DES: ${DES}")
 
-FILE(GLOB_RECURSE PROTO_CPP_SOURCES RELATIVE "${CMAKE_CURRENT_BINARY_DIR}" CONFIGURE_DEPENDS "*.cpp")
+FILE(GLOB_RECURSE PROTO_CPP_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/*.cpp")
 MESSAGE("CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
 MESSAGE("PROTO_CPP_SOURCES: ${PROTO_CPP_SOURCES}")
 
-ADD_LIBRARY(proto ${PROTO_SRC})
+ADD_LIBRARY(proto ${PROTO_SRC}  ${PROTO_HEADER})
 
 add_dependencies(proto rpc_generate)
