fix proto generated dir

--- a/server/action-server3/proto/CMakeLists.txt
+++ b/server/action-server3/proto/CMakeLists.txt
@@ -26,3 +26,5 @@ MESSAGE("PROTO_CPP_SOURCES: ${PROTO_CPP_SOURCES}")
 ADD_LIBRARY(proto ${PROTO_SRC}  ${PROTO_HEADER})
 
 add_dependencies(proto rpc_generate)
+
+set(GENERATED_PROTO_DIR ${CMAKE_CURRENT_BINARY_DIR} PARENT_SCOPE)
