--- a/server/action-server3/proto/CMakeLists.txt
+++ b/server/action-server3/proto/CMakeLists.txt
@@ -1,7 +1,5 @@
 INCLUDE(FindProtobuf)
 FIND_PACKAGE(Protobuf REQUIRED)
-INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 
 set(Protobuf_DEBUG ON)
 
@@ -24,6 +22,9 @@ MESSAGE("CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
 MESSAGE("PROTO_CPP_SOURCES: ${PROTO_CPP_SOURCES}")
 
 ADD_LIBRARY(proto ${PROTO_SRC}  ${PROTO_HEADER})
+
+target_include_directories(proto PRIVATE ${PROTOBUF_INCLUDE_DIR})
+target_include_directories(proto PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
 
 add_dependencies(proto rpc_generate)
 
