--- a/server/action-server3/rpc/CMakeLists.txt
+++ b/server/action-server3/rpc/CMakeLists.txt
@@ -1,5 +1,5 @@
-FILE(GLOB_RECURSE RPC_SOURCES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" CONFIGURE_DEPENDS "*.yaml")
-MESSAGE("RPC_SOURCES: ${RPC_SOURCES}")
+file(GLOB_RECURSE RPC_SOURCES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" CONFIGURE_DEPENDS "*.yaml")
+message("RPC_SOURCES: ${RPC_SOURCES}")
 
 execute_process(
   COMMAND pipenv sync
@@ -15,4 +15,4 @@ add_custom_target(rpc_generate
   COMMAND find ${CMAKE_CURRENT_SOURCE_DIR} -type f -name '*.yaml' | sort | xargs sha1sum | sha1sum > "${CMAKE_CURRENT_BINARY_DIR}/rpc.hash"
 )
 
-MESSAGE("rpc.CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
+message("rpc.CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
