to be built in one step

--- a/server/action-server3/proto/CMakeLists.txt
+++ b/server/action-server3/proto/CMakeLists.txt
@@ -6,10 +6,12 @@ set(Protobuf_DEBUG ON)
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/battle.proto DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/message.proto DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
-file(GLOB_RECURSE BASE_PROTO_SOURCES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" CONFIGURE_DEPENDS "*.proto")
-message("BASE_PROTO_SOURCES: ${BASE_PROTO_SOURCES}")
+# file(GLOB_RECURSE BASE_PROTO_SOURCES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" CONFIGURE_DEPENDS "*.proto")
+# message("BASE_PROTO_SOURCES: ${BASE_PROTO_SOURCES}")
 
-file(GLOB_RECURSE PROTO_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/*.proto")
+# file(GLOB_RECURSE PROTO_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/*.proto")
+set(PROTO_SOURCES ${GENERATED_PROTO_FILES})
+message("GENERATED_PROTO_FILES: ${GENERATED_PROTO_FILES}")
 message("PROTO_SOURCES: ${PROTO_SOURCES}")
 
 protobuf_generate_cpp(PROTO_SRC PROTO_HEADER DESCRIPTORS DES ${PROTO_SOURCES})
