--- a/server/action-server3/rpc/CMakeLists.txt
+++ b/server/action-server3/rpc/CMakeLists.txt
@@ -3,9 +3,31 @@ message("RPC_SOURCES: ${RPC_SOURCES}")
 
 execute_process(
   COMMAND pipenv sync
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../torikime
+)
+execute_process(
   COMMAND pipenv run ${CMAKE_CURRENT_SOURCE_DIR}/../torikime/torikime.py -v -o ${CMAKE_CURRENT_BINARY_DIR}/../proto -c "${CMAKE_CURRENT_BINARY_DIR}/generated" -i ${CMAKE_CURRENT_SOURCE_DIR} --cache_dir ${CMAKE_CURRENT_BINARY_DIR}/torikime
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../torikime
 )
+
+# execute_process(
+#   COMMAND find CMAKE_CURRENT_SOURCE_DIR -name "*.proto" -printf "%p;" OUTPUT_VARIABLE SOURCE_PROTO_FILES
+#   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../torikime
+# )
+
+file(GLOB_RECURSE SOURCE_PROTO_FILES CONFIGURE_DEPENDS "${CMAKE_SOURCE_DIR}/proto/*.proto")
+message("SOURCE_PROTO_FILES: ${SOURCE_PROTO_FILES}")
+
+file(GLOB_RECURSE SOURCE_PROTO_FILES CONFIGURE_DEPENDS "${CMAKE_BINARY_DIR}/proto/*.proto")
+message("GENERATED_PROTO_FILES: ${GENERATED_PROTO_FILES}")
+
+# execute_process(
+#   COMMAND find ${CMAKE_CURRENT_BINARY_DIR}/../proto -name "*.proto" -printf "%p;" OUTPUT_VARIABLE GENERATED_PROTO_FILES
+#   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../torikime
+# )
+
+list(REMOVE_ITEM GENERATED_PROTO_FILES "")
+list(APPEND GENERATED_PROTO_FILES ${SOURCE_PROTO_FILES})
 
 add_custom_target(rpc_generate
   COMMAND pipenv sync
@@ -16,3 +38,5 @@ add_custom_target(rpc_generate
 )
 
 message("rpc.CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
+message("GENERATED_PROTO_FILES: ${GENERATED_PROTO_FILES}")
+set(GENERATED_PROTO_FILES ${GENERATED_PROTO_FILES} PARENT_SCOPE)
