disable verbose logs

--- a/server/action-server3/proto/CMakeLists.txt
+++ b/server/action-server3/proto/CMakeLists.txt
@@ -7,17 +7,17 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/battle.proto DESTINATION ${CMAKE_CURRENT_B
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/message.proto DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 set(PROTO_SOURCES ${GENERATED_PROTO_FILES})
-message("GENERATED_PROTO_FILES: ${GENERATED_PROTO_FILES}")
-message("PROTO_SOURCES: ${PROTO_SOURCES}")
+# message("GENERATED_PROTO_FILES: ${GENERATED_PROTO_FILES}")
+# message("PROTO_SOURCES: ${PROTO_SOURCES}")
 
 protobuf_generate_cpp(PROTO_SRC PROTO_HEADER DESCRIPTORS DES ${PROTO_SOURCES})
-message("PROTO_SRC: ${PROTO_SRC}")
-message("PROTO_HEADER: ${PROTO_HEADER}")
-message("DES: ${DES}")
+# message("PROTO_SRC: ${PROTO_SRC}")
+# message("PROTO_HEADER: ${PROTO_HEADER}")
+# message("DES: ${DES}")
 
 file(GLOB_RECURSE PROTO_CPP_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/*.cpp")
-message("CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
-message("PROTO_CPP_SOURCES: ${PROTO_CPP_SOURCES}")
+# message("CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
+# message("PROTO_CPP_SOURCES: ${PROTO_CPP_SOURCES}")
 
 add_library(proto ${PROTO_SRC}  ${PROTO_HEADER})
 
