areaのトリガー情報を追加

--- a/server/action-server3/rpc/area.yaml
+++ b/server/action-server3/rpc/area.yaml
@@ -5,3 +5,11 @@ contracts:
       notification:
         area_id: uint32
         unit_id: uint64
+    setup_dynamic_trigger:
+      imports:
+        - "area"
+      notification:
+        area_id: uint32
+        triggers:
+          container: array
+          type: potato.Trigger
