--- a/server/action-server3/rpc/area.yaml
+++ b/server/action-server3/rpc/area.yaml
@@ -5,10 +5,12 @@ contracts:
       notification:
         area_id: uint32
         unit_id: uint64
-    setup_dynamic_trigger:
+    constituted_data:
       imports:
         - "area"
-      notification:
+      request:
+        area_id: uint32
+      response:
         area_id: uint32
         triggers:
           container: array
