fix boost shared library loading error
```
action-server3_1  | ./action-server3: error while loading shared libraries: libboost_thread.so.1.71.0: cannot open shared object file: No such file or directory
server_action-server3_1 exited with code 127
```

--- a/server/action-server3/Dockerfile
+++ b/server/action-server3/Dockerfile
@@ -31,6 +31,7 @@ FROM ubuntu:latest AS action_server3_application
 COPY --from=action_server3_build /opt/app/action-server3/build.docker/action-server3 ./
 RUN apt-get update && apt-get install -yq \
     libprotobuf17 \
+    libboost-thread1.71.0 \
     && apt clean \
     && rm -rf /var/lib/apt/lists/*
 CMD ["./action-server3", "28888"]
