--- a/server/action-server3/rpc/unit.yaml
+++ b/server/action-server3/rpc/unit.yaml
@@ -4,6 +4,9 @@ contracts:
     spawn_ready:
       imports:
         - "message"
+        - "unit_spawn"
+        - "unit_move"
+        - "unit_stop"
       request:
         area_id: uint32
       response:
@@ -14,6 +17,15 @@ contracts:
         individuality: potato.Individuality
         cause: potato.UnitSpawnCause
         avatar: potato.Avatar
+        neighbors_spawn:
+          container: array
+          type: unit.spawn.Notification
+        neighbors_move:
+          container: array
+          type: unit.move.Notification
+        neighbors_stop:
+          container: array
+          type: unit.stop.Notification
     spawn:
       imports:
         - "message"
