--- a/server/action-server3/rpc/unit.yaml
+++ b/server/action-server3/rpc/unit.yaml
@@ -9,12 +9,38 @@ defines:
       spawn: unit.spawn.Notification
       move: unit.move.Notification
       stop: unit.stop.Notification
+  unit_type:
+    enum:
+      - UNIT_TYPE_NONE
+      - UNIT_TYPE_PLAYER
+      - UNIT_TYPE_ENEMY
+      - UNIT_TYPE_BULLET
+      - UNIT_TYPE_WALL
+      - UNIT_TYPE_ITEM
+      - UNIT_TYPE_MAX
+  unit_direction:
+    enum:
+      - UNIT_DIRECTION_DOWN: 0
+      - UNIT_DIRECTION_UP: 1
+      - UNIT_DIRECTION_LEFT: 2
+      - UNIT_DIRECTION_RIGHT: 3
+  unit_spawn_cause:
+    enum:
+      - UNIT_SPAWN_CAUSE_NONE
+      - UNIT_SPAWN_CAUSE_ASIS
+      - UNIT_SPAWN_CAUSE_LOGGEDIN
+      - UNIT_SPAWN_CAUSE_LOGGEDOUT
+      - UNIT_SPAWN_CAUSE_FASTTRAVEL
+      - UNIT_SPAWN_CAUSE_RETIRE
+
 contracts:
   unit:
     spawn_ready:
       imports:
         - "message"
         - "neighbor"
+        - "unit_direction"
+        - "unit_spawn_cause"
       request:
         area_id: uint32
       response:
@@ -27,10 +53,12 @@ contracts:
         avatar: potato.Avatar
         neighbors:
           container: array
-          type: torikime.Neighbor
+          type: potato.Neighbor
     spawn:
       imports:
         - "message"
+        - "unit_direction"
+        - "unit_spawn_cause"
       notification:
         session_id: int32
         unit_id: uint64
@@ -43,6 +71,8 @@ contracts:
     despawn:
       imports:
         - "message"
+        - "unit_direction"
+        - "unit_spawn_cause"
       notification:
         session_id: int32
         unit_id: uint64
@@ -53,6 +83,7 @@ contracts:
     move:
       imports:
         - "message"
+        - "unit_direction"
       request:
         unit_id: uint64
         time: int64 # 移動開始時間
@@ -75,6 +106,7 @@ contracts:
     stop:
       imports:
         - "message"
+        - "unit_direction"
       request:
         unit_id: uint64
         time: int64 # 移動開始時間
@@ -93,6 +125,7 @@ contracts:
     knockback:
       imports:
         - "message"
+        - "unit_direction"
       notification:
         unit_id: uint64
         area_id: uint32
