remove `message.proto` and replace to generated proto from `core_defines.yaml`

--- a/server/action-server3/proto/CMakeLists.txt
+++ b/server/action-server3/proto/CMakeLists.txt
@@ -3,8 +3,8 @@ find_package(Protobuf REQUIRED)
 
 set(Protobuf_DEBUG ON)
 
-file(GLOB STATIC_PROTOS "${CMAKE_CURRENT_SOURCE_DIR}/*.proto")
-file(COPY ${STATIC_PROTOS} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+# file(GLOB STATIC_PROTOS "${CMAKE_CURRENT_SOURCE_DIR}/*.proto")
+# file(COPY ${STATIC_PROTOS} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 set(PROTO_SOURCES ${GENERATED_PROTO_FILES})
 # message("GENERATED_PROTO_FILES: ${GENERATED_PROTO_FILES}")
