--- a/server/action-server3/rpc/diagnosis.yaml
+++ b/server/action-server3/rpc/diagnosis.yaml
@@ -15,7 +15,7 @@ contracts:
         receive_time: int64
     gizmo:
       imports:
-        - "message"
+        - "vector3"
       notification:
         name: string
         begin: potato.Vector3
