クライアントからサーバーにコマンドを投げることができる `Diagnosis.Command` を追加

--- a/server/action-server3/rpc/diagnosis.yaml
+++ b/server/action-server3/rpc/diagnosis.yaml
@@ -21,3 +21,11 @@ contracts:
         begin: potato.Vector3
         end: potato.Vector3
         color: uint32
+    command:
+      request:
+        name: string
+        arguments:
+          container: array
+          type: string
+      response:
+        result: string
