--- a/client/potato/Assets/Scripts/Editor/Editor.asmdef
+++ b/client/potato/Assets/Scripts/Editor/Editor.asmdef
@@ -5,7 +5,9 @@
         "GUID:d2a1c14f29b1faf49a57beab4007c7f1",
         "GUID:78cd2e4cce174be4e9dd89c6dc4e2e11"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
