--- a/client/potato/Assets/Scripts/Editor/Editor.asmdef
+++ b/client/potato/Assets/Scripts/Editor/Editor.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:d2a1c14f29b1faf49a57beab4007c7f1",
-        "GUID:78cd2e4cce174be4e9dd89c6dc4e2e11"
+        "GUID:78cd2e4cce174be4e9dd89c6dc4e2e11",
+        "GUID:7a80c85873004834a9649e21aa2f6f69"
     ],
     "includePlatforms": [
         "Editor"
