クライアントがサーバーのaccept後の初期化を待てるようにした

--- a/server/action-server3/rpc/auth.yaml
+++ b/server/action-server3/rpc/auth.yaml
@@ -1,6 +1,9 @@
 # yaml -> torikime -> generate .proto & rpc code.
 contracts:
   auth:
+    server_ready:
+      notification:
+        ok: bool
     login:
       request:
         user_id: string
