--- a/server/functions/get-hosts/package.json
+++ b/server/functions/get-hosts/package.json
@@ -5,6 +5,7 @@
   "main": "entrypoint.js",
   "scripts": {
     "dev": "nodemon",
+    "start": "npx functions-framework --target=listVMs --signature-type=http",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,5 +13,8 @@
   "dependencies": {
     "express": "^4.17.3",
     "googleapis": "^97.0.0"
+  },
+  "devDependencies": {
+    "@google-cloud/functions-framework": "^3.1.1"
   }
 }
