--- a/server/functions/get-hosts/package.json
+++ b/server/functions/get-hosts/package.json
@@ -5,13 +5,12 @@
   "main": "entrypoint.js",
   "scripts": {
     "dev": "nodemon",
-    "start": "npx functions-framework --target=listVMs --signature-type=http",
+    "start": "npx functions-framework --target=getHosts --signature-type=http",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3",
     "googleapis": "^97.0.0"
   },
   "devDependencies": {
