add  field and set

--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -19,4 +19,5 @@ jobs:
         with:
           name: getHosts
           runtime: node16
+          region: asia-northeast1
           source_dir: server/functions/get-hosts
