--- a/.github/workflows/deploy-functions.yml
+++ b/.github/workflows/deploy-functions.yml
@@ -18,6 +18,6 @@ jobs:
         uses: google-github-actions/deploy-cloud-functions@v0
         with:
           name: function-1
-          runtime: node16
+          runtime: nodejs16
           region: asia-northeast1
           source_dir: server/functions/get-hosts
