--- a/client/potato/Assets/Scripts/Controller/Controller.asmdef
+++ b/client/potato/Assets/Scripts/Controller/Controller.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Example",
+    "name": "Controller",
     "rootNamespace": "",
     "references": [
         "GUID:d2a1c14f29b1faf49a57beab4007c7f1",
